# webpage-extractor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  containers.py  main.py
app/application/: extract_usecase.py
app/domain/: models.py  ports.py
app/infrastructure/extraction/: accordion_content_extractor.py  image_extractor.py  trafilatura_markdown_extractor.py
app/infrastructure/http/: httpx_client.py
app/infrastructure/storage/: filesystem_storage.py
app/presentation/: api.py
app/presentation/templates/: base.html  index.html
tests/: test_extract_usecase.py
